# Septik

./: .gitignore  Cargo.toml  build.rs
GodotClient/: Back.gd  Camera.gd  Exit.gd  Join.gd  Multiplayer.gd  MultiplayerMenu.gd  SinglePlayer.gd  SinglePlayer.tscn  TitleScreen.tscn  project.godot
GodotClient/.import/: Map__10_Raytrace.tga-9f1fac91ffdda84dfc54549295070b05.md5  Map__6_Noise.tga-45412de60ce3d82d97e85eade05e158c.etc2.stex  Map__6_Noise.tga-45412de60ce3d82d97e85eade05e158c.md5  Map__6_Noise.tga-45412de60ce3d82d97e85eade05e158c.s3tc.stex  Map__6_Noise.tga-45412de60ce3d82d97e85eade05e158c.stex  falcon.jpg-51744c1bea4ea4b60b6318aff1275b78.md5  falcon.jpg-51744c1bea4ea4b60b6318aff1275b78.stex  millenium-falcon.obj-00f985384f5c3361e5a03186f215ab8a.md5
SeptikGodotClient/: RayMarcher3d_voxels.shader  Raymarcher.tres  Raymarcher.tscn  SeptikGameEngine.gdns  Spatial.tscn  VoxelRayMarcher.gd  project.godot
SeptikGodotClient/.import/: untitled.obj-7d187ae60ceaddcd4eb02f8742529891.md5
SeptikGodotClient/test_data/: test_8x8_voxel.aseprite  text_64x64_16cubed_voxel.png.import
SeptikGodotIntegration/SeptikGodotClient/: ColorRect.gd  Raymarcher.tres  Raymarcher.tscn  septik_gdnative.tres
septik/: Cargo.toml
septik/src/: lib.rs  main.rs
septik/src/ecs/: mod.rs
septik/src/ecs/assemblages/: mod.rs
septik/src/ecs/components/: gfx_components.rs  mesh_component.rs  mod.rs  unit_components.rs
septik/src/ecs/systems/: mod.rs
septik/src/lib_core/: aabb.rs  direction.rs  mod.rs
septik/src/lib_core/colors/: mod.rs
septik/src/lib_core/math/: fixed_number.rs  mod.rs  range.rs  rotation.rs  vec3d.rs
septik/src/lib_core/voxels/: materials.rs  mod.rs  voxel.rs  voxel_chunk.rs
septik/src/platform_specifc/: file_io.rs  kiss3d.rs  mod.rs  sdl2.rs  three.rs
septik/src/platform_specifc/godot/: input_handler.rs
septik/src/platform_specifc/opengl/: helpers.rs  mod.rs  program.rs  shaders.rs  sprite.rs  texture.rs  vao.rs  vbo.rs  vertices.rs
septik/src/scripting/: mod.rs  program.sl  slisp.pest
septik/src/scripting/archived/: mod.rs  slisp.pest
septik_compiler/: Cargo.toml
septik_compiler/src/: lib.rs  septik.pest
septik_fm_synth/: Cargo.toml
septik_fm_synth/src/: program.septik
src/: game_interface.rs  macros.rs  main.rs
src/backend/: mod.rs  sdl2_backend_gl.rs  sys_events.rs  wgpu_backend.rs
src/cb_math/: cb_matrix.rs  cb_range.rs  mod.rs
src/cb_simulation/: mod.rs  world_builder.rs
src/components/: mod.rs  (+1 more)
(+47 files in other folders)
