[package]
name = "septik"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
specs = "0.16.1"
nalgebra = "0.20.0"
fixed = "0.5.4"


[dependencies.sdl2]
version = "0.33.0"
features = ["bundled"]