[package]
name = "septik"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
rusttype = "0.8.2"
image = { version = "0.23", default-features = false, features = ["png"] }
nalgebra = "0.21.0"
glutin = "0.24.0"

[dependencies.sdl2]
version = "0.33.0"
features = ["bundled"]

