[package]
name = "septik"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.21.0"
specs = "0.16.1"
fixed = "0.5.4"
time = "0.2.9"
hyper = "0.13.4"
futures = "0.3.4"