[package]
name = "septik"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed = "0.5.7"
time = "0.2.16"


# Rendering specific crates
nalgebra = "0.21.0"


# Three backend crates
three = "0.4.0"
mint = "0.5.1" # three dependency
cgmath = { version = "0.16", features = ["mint"] }


# Kiss3d backend crates
kiss3d = "0.24.1"

