[package]
name = "septik"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.34.1"
features = ["bundled", "static-link"]

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
fixed = "1.0.0"
time = "0.2.16"

# Rendering specific crates
gl = "0.14.0"

# Image crates
image = "0.23.5"



glutin = "0.24.1"

nalgebra = "0.21.0"


# Three backend crates
three = "0.4.0"
mint = "0.5.1" # three dependency
cgmath = { version = "0.16", features = ["mint"] }


# Kiss3d backend crates
kiss3d = "0.24.1"

